ros2_ws/log/build_2024-05-01_19-20-39/publisher_pkg/stdout_stderr.log
running egg_info
creating ../../build/publisher_pkg/publisher_pkg.egg-info
writing ../../build/publisher_pkg/publisher_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/publisher_pkg/publisher_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/publisher_pkg/publisher_pkg.egg-info/entry_points.txt
writing requirements to ../../build/publisher_pkg/publisher_pkg.egg-info/requires.txt
writing top-level names to ../../build/publisher_pkg/publisher_pkg.egg-info/top_level.txt
writing manifest file '../../build/publisher_pkg/publisher_pkg.egg-info/SOURCES.txt'
reading manifest file '../../build/publisher_pkg/publisher_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/publisher_pkg/publisher_pkg.egg-info/SOURCES.txt'
running build
running build_py
creating /home/mford/ros2_ws/build/publisher_pkg/build
creating /home/mford/ros2_ws/build/publisher_pkg/build/lib
creating /home/mford/ros2_ws/build/publisher_pkg/build/lib/publisher_pkg
copying publisher_pkg/__init__.py -> /home/mford/ros2_ws/build/publisher_pkg/build/lib/publisher_pkg
copying publisher_pkg/publisher.py -> /home/mford/ros2_ws/build/publisher_pkg/build/lib/publisher_pkg
running install
running install_lib
creating /home/mford/ros2_ws/install/publisher_pkg/lib/python3.10/site-packages/publisher_pkg
copying /home/mford/ros2_ws/build/publisher_pkg/build/lib/publisher_pkg/__init__.py -> /home/mford/ros2_ws/install/publisher_pkg/lib/python3.10/site-packages/publisher_pkg
copying /home/mford/ros2_ws/build/publisher_pkg/build/lib/publisher_pkg/publisher.py -> /home/mford/ros2_ws/install/publisher_pkg/lib/python3.10/site-packages/publisher_pkg
byte-compiling /home/mford/ros2_ws/install/publisher_pkg/lib/python3.10/site-packages/publisher_pkg/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/mford/ros2_ws/install/publisher_pkg/lib/python3.10/site-packages/publisher_pkg/publisher.py to publisher.cpython-310.pyc
running install_data
creating /home/mford/ros2_ws/install/publisher_pkg/share/ament_index
creating /home/mford/ros2_ws/install/publisher_pkg/share/ament_index/resource_index
creating /home/mford/ros2_ws/install/publisher_pkg/share/ament_index/resource_index/packages
  File "/home/mford/ros2_ws/install/publisher_pkg/lib/python3.10/site-packages/publisher_pkg/publisher.py", line 27
    main()def main():
          ^^^
SyntaxError: invalid syntax

copying resource/publisher_pkg -> /home/mford/ros2_ws/install/publisher_pkg/share/ament_index/resource_index/packages
copying package.xml -> /home/mford/ros2_ws/install/publisher_pkg/share/publisher_pkg
running install_egg_info
Copying ../../build/publisher_pkg/publisher_pkg.egg-info to /home/mford/ros2_ws/install/publisher_pkg/lib/python3.10/site-packages/publisher_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing publisher script to /home/mford/ros2_ws/install/publisher_pkg/lib/publisher_pkg
writing list of installed files to '/home/mford/ros2_ws/build/publisher_pkg/install.log'
